<resources>
    <string name="app_name">MoonBookShop</string>

    <!--Drawer Menu-->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Categories</item>
        <item>Bestsellers</item>
        <item>Basket</item>
        <item>About us</item>
    </string-array>

    <!--Activity names-->
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="bestsellers">Bestsellers</string>
    <string name="basket">Basket</string>
    <string name="about_us">About us</string>

    <!--Property name-->
    <string name="ean">EAN</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="description">Description</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_price">Unavailable</string>
    <string name="buy_now">Buy Now!</string>

</resources>
